--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"scripts": {
-		"build": "webpack --mode=production",
+		"build": "rm -rf distribution && webpack --mode=production",
 		"watch": "webpack --mode=development --watch",
 		"postbuild": "node openuserjs/build.js"
 	},
