--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-	"private": true,
-	"scripts": {
-		"build": "rm -rf distribution && webpack --mode=production",
-		"watch": "webpack --mode=development --watch",
-		"postbuild": "node openuserjs/build.js"
-	},
-	"devDependencies": {
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"babel-plugin-transform-unicode-property-regex": "^2.0.5",
-		"babel-polyfill": "6.22.0",
-		"babel-preset-latest": "6.24.1",
-		"babel-preset-react": "6.24.1",
-		"babel-preset-stage-0": "6.24.1",
-		"babel-preset-stage-3": "^6.24.1",
-		"chrome-webstore-upload-cli": "^1.0.0",
-		"common-tags": "^1.7.2",
-		"copy-webpack-plugin": "^4.4.2",
-		"css-loader": "^1.0.0",
-		"node-sass": "^4.12.0",
-		"npm-run-all": "^4.1.5",
-		"sass-loader": "^7.1.0",
-		"style-loader": "^0.21.0",
-		"uglifyjs-webpack-plugin": "^1.2.1",
-		"webext": "^1.9.1-with-submit.1",
-		"webpack": "^4.0.0",
-		"webpack-cli": "^2.0.6"
-	},
-	"babel": {
-		"plugins": [
-			[
-				"transform-react-jsx",
-				{
-					"pragma": "h",
-					"useBuiltIns": true
-				}
-			],
-			[
-				"transform-unicode-property-regex",
-				{
-					"useUnicodeFlag": true
-				}
-			]
-		],
-		"env": {
-			"testing": {
-				"plugins": [
-					"transform-es2015-modules-commonjs"
-				]
-			}
-		}
-	},
-	"stylelint": {
-		"extends": "stylelint-config-xo",
-		"rules": {
-			"declaration-no-important": null,
-			"property-no-vendor-prefix": null,
-			"no-descending-specificity": null,
-			"property-blacklist": null,
-			"selector-class-pattern": null,
-			"selector-max-class": null,
-			"rule-empty-line-before": null,
-			"at-rule-empty-line-before": null,
-			"selector-max-compound-selectors": null
-		}
-	}
+  "private": true,
+  "scripts": {
+    "build": "rm -rf distribution && webpack --mode=production",
+    "watch": "webpack --mode=development --watch",
+    "postbuild": "node openuserjs/build.js"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-plugin-transform-unicode-property-regex": "^2.0.5",
+    "babel-polyfill": "6.22.0",
+    "babel-preset-latest": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "chrome-webstore-upload-cli": "^1.0.0",
+    "common-tags": "^1.7.2",
+    "copy-webpack-plugin": "^4.4.2",
+    "css-loader": "^1.0.0",
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.1",
+    "webext": "^1.9.1-with-submit.1",
+    "webpack": "^4.0.0",
+    "webpack-cli": "3.3.1"
+  },
+  "babel": {
+    "plugins": [
+      [
+        "transform-react-jsx",
+        {
+          "pragma": "h",
+          "useBuiltIns": true
+        }
+      ],
+      [
+        "transform-unicode-property-regex",
+        {
+          "useUnicodeFlag": true
+        }
+      ]
+    ],
+    "env": {
+      "testing": {
+        "plugins": [
+          "transform-es2015-modules-commonjs"
+        ]
+      }
+    }
+  },
+  "stylelint": {
+    "extends": "stylelint-config-xo",
+    "rules": {
+      "declaration-no-important": null,
+      "property-no-vendor-prefix": null,
+      "no-descending-specificity": null,
+      "property-blacklist": null,
+      "selector-class-pattern": null,
+      "selector-max-class": null,
+      "rule-empty-line-before": null,
+      "at-rule-empty-line-before": null,
+      "selector-max-compound-selectors": null
+    }
+  }
 }
