--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "rm -rf distribution && webpack --mode=production",
+    "build": "rimraf distribution && webpack --mode=production",
     "watch": "webpack --mode=development --watch",
     "postbuild": "node openuserjs/build.js"
   },
@@ -22,6 +22,7 @@
     "css-loader": "^1.0.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
+    "rimraf": "3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.1",
